Add additional limits per chat for object size and objects quantity